[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/utils/confirmation_popup.gd" type="Script" id=1]
[ext_resource path="res://fonts/RobotoCondensed-Regular.ttf" type="DynamicFontData" id=2]


[sub_resource type="DynamicFont" id=1]
size = 20
font_data = ExtResource( 2 )

[node name="GenericTextPopup" type="Panel"]
margin_left = 16.0
margin_top = 256.0
margin_right = 544.0
margin_bottom = 576.0
script = ExtResource( 1 )

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 512.0
margin_bottom = 240.0
custom_fonts/normal_font = SubResource( 1 )

[node name="PopupButtonAccept" type="Button" parent="."]
margin_left = 8.0
margin_top = 256.0
margin_right = 240.0
margin_bottom = 312.0

[node name="PopupButtonCancel" type="Button" parent="."]
margin_left = 280.0
margin_top = 256.0
margin_right = 512.0
margin_bottom = 312.0

[connection signal="pressed" from="PopupButtonAccept" to="." method="_on_PopupButtonAccept_pressed"]
[connection signal="pressed" from="PopupButtonCancel" to="." method="_on_PopupButtonCancel_pressed"]
